# dd-zipmin

./: README.md  pyproject.toml  requirements.txt
benchmark/scripts/: bench_zipmin.py  generate_inputs.sh
predicates/: README.md
predicates/xmlprocessor/shared/: r_base.sh  r_stub.sh
predicates/xmlprocessor/xml-071d221-1/: r.sh
predicates/xmlprocessor/xml-071d221-2/: r.sh
predicates/xmlprocessor/xml-1e9bc83-1/: input.pick.xml  r.sh
predicates/xmlprocessor/xml-1e9bc83-2/: input.pick.xml  r.sh  v.sh
predicates/xmlprocessor/xml-1e9bc83-3/: input.pick.xml  r.sh
predicates/xmlprocessor/xml-1e9bc83-4/: input.pick.xml  r.sh
predicates/xmlprocessor/xml-1e9bc83-5/: input.pick.xml  r.sh
predicates/xmlprocessor/xml-1e9bc83-6/: r.sh
predicates/xmlprocessor/xml-1e9bc83-7/: r.sh
predicates/xmlprocessor/xml-1e9bc83-8/: r.sh
predicates/xmlprocessor/xml-1e9bc83-9/: r.sh
predicates/xmlprocessor/xml-2d4ec80-1/: r.sh
predicates/xmlprocessor/xml-327c8af-1/: r.sh
predicates/xmlprocessor/xml-3398ac2-1/: r.sh
predicates/xmlprocessor/xml-3398ac2-2/: r.sh
predicates/xmlprocessor/xml-3398ac2-3/: r.sh
predicates/xmlprocessor/xml-3398ac2-4/: r.sh
predicates/xmlprocessor/xml-3398ac2-5/: r.sh
predicates/xmlprocessor/xml-4c99b96-1/: r.sh
predicates/xmlprocessor/xml-4c99b96-10/: r.sh
predicates/xmlprocessor/xml-4c99b96-11/: r.sh
predicates/xmlprocessor/xml-4c99b96-12/: r.sh
scripts/: README.md  basexserver_wrapper  cherry_pick  minimize_xml
src/dd/: ddmin.py  zipmin.py
src/utils/: oracle.py  ramdisk.py
tests/: test_sanity.py
(+50 files in other folders)
